@@ -1,0 +1,11 @@
+SET(OBD_SIMGEN_ERROR "On" CACHE BOOL "Enable Error obdsim generator")
+
+IF(OBD_SIMGEN_ERROR)
+	FILE(GLOB OBDSIMGEN_ERROR_SRCS
+		generators/error/*.c
+	)
+	ADD_LIBRARY(ckobdsim_error STATIC ${OBDSIMGEN_ERROR_SRCS})
+	SET(GENERATOR_LIBS ${GENERATOR_LIBS} ckobdsim_error)
+	ADD_DEFINITIONS(-DOBDSIMGEN_ERROR)
+ENDIF(OBD_SIMGEN_ERROR)
+
